update version and fix css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Logo-psi-bar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client-website-psychology</title>
+    <title>Psi Thais Pazzin</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Psicóloga Thais Ferraz Pazzin | CRP 07/38927. Atendimento psicológico online e
+    presencial para adolescentes e adultos. Agende sua consulta." />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Psi Thais Pazzin | Psicóloga" />
+    <meta property="og:description" content="Atendimento psicológico online e presencial para adolescentes e adultos.
+    Um espaço de acolhimento para cuidar da sua saúde mental." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://psithaispazzin.com.br/" />
+    <meta property="og:image" content="/Logo-psi.webp" />
+    <meta property="og:locale" content="pt_BR" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
